--- a/animation.html
+++ b/animation.html
@@ -1038,17 +1038,17 @@
                           </span>
                         </div>
                       </div>
-                      <div class="parallax-content--img--text-container grid-col-1-3 hide-on-desktop">
-                        <div class="span-text-flex--inline-start lg:grid-col-1-4 lg:grid-row-1 md:grid-col-1-4 md:grid-row-1">
-                          <span class="display-flex flex-row wfit">
+                      <div class="parallax-content--img--text-container grid-col-1-3 grid-row-2">
+                        <div class="span-text-flex--inline-start grid-col-1-3 grid-row-1">
+                          <span class="span-text-flex--inline-start flex-start gap-none--important">
                             <h3 class="line-height--standard-caps uppercase line-height--standard-caps md:text-sm">GOODFORNOTHING</h3>
                             <sup class="text-sup line-height--standard-caps uppercase">Ⓡ</sup>
                           </span>
                         </div>
-                        <div class="span-text-flex--inline-start md:flex-start lg:flex-end lg:grid-col-3-4 lg:grid-row-1 md:grid-col-1-4 md:grid-row-2">
-                          <span class="line-height--standard-caps hide-on-desktop uppercase  md:text-sm">/</span>
+                        <div class="span-text-flex--inline-start flex-end grid-col-1-3 grid-row-1">
+                          <span class="line-height--standard-caps uppercase md:text-sm">/</span>
                           <span class="">
-                            <p class="line-height--standard-caps hide-on-desktop md:text-sm">Instagram Post: Black Friday</p>
+                            <p class="line-height--standard-caps md:text-sm">Instagram Post: Black Friday</p>
                           </span>
                         </div>
                       </div>
