--- a/design.html
+++ b/design.html
@@ -892,7 +892,7 @@
                           <span class="line-height--standard-caps hide-on-mob">/</span>
                           <span class="">
                             <p class="line-height--standard-caps hide-on-mob">Ad Creative & Collaboration</p>
-                            <p class="line-height--standard-caps hide-on-desktop md:text-sm">Ad Creative & Collaboration</p>
+                            <p class="line-height--standard-caps hide-on-desktop md:text-sm">Digital Ads</p>
                           </span>
                         </div>
                       </div>
