--- a/cv.html
+++ b/cv.html
@@ -493,7 +493,7 @@
                 <div class="grid grid-auto-cols--minmax gap-one grid-col-1-9 height-fit">
                   <div class="content--text-desktop-pages lg:pt-s lg:pt-none lg:border-top--one pb-m">
                     <h3 class="line-height--standard-caps md:text-xl lg:text-2xl lgmm:text-2xl lg:grid-col-1-2 lgmm:grid-col-1-3 lgbgb:grid-col-1-2 md:text-m grid-row-1 uppercase">Background</h3>
-                    <p class="intro-text-desktop lg:grid-col-1-2 lgmm:grid-col-3-5 lgbg:grid-col-3-5 lgbgb:grid-col-3-5 md:text-m lg:text-m lgbt:text-l">
+                    <p class="lg:grid-col-1-2 lgmm:grid-col-3-5 lgbg:grid-col-3-5 lgbgb:grid-col-3-5 md:text-m lg:text-m lgbt:text-l">
                       Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D.
                     </p>
                     <a href="assets/Chris-Edwards-CV.pdf" class="link--cv-page link--main lg:grid-col-1-2 lgmm:grid-col-3-5 lgbgb:grid-col-3-5 lgbg:grid-col-3-5 uppercase mt-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
