--- a/animation.html
+++ b/animation.html
@@ -1295,7 +1295,13 @@
                             <sup class="text-sup line-height--standard-caps uppercase">Ⓡ</sup>
                           </span>
                         </div>
-                        <div class="span-text-flex--inline-start flex-end grid-col-1-3 grid-row-1 lgma:justify-content-start lgma:grid-row-2">
+                        <div class="span-text-flex--inline-start flex-end grid-col-1-3 grid-row-1 lgma:justify-content-start lgma:grid-row-2 hide-on-mob">
+                          <span class="line-height--standard-caps uppercase md:text-sm">/</span>
+                          <span class="">
+                            <p class="line-height--standard-caps md:text-sm">Newsletter Creative</p>
+                          </span>
+                        </div>
+                        <div class="span-text-flex--inline-start flex-end grid-col-1-3 grid-row-1 hide-on-desktop">
                           <span class="line-height--standard-caps uppercase md:text-sm">/</span>
                           <span class="">
                             <p class="line-height--standard-caps md:text-sm">Newsletter Creative</p>
