--- a/ui-code.html
+++ b/ui-code.html
@@ -1060,7 +1060,7 @@
                         <span class="line-height--standard-caps uppercase md:text-sm">/</span>
                         <p class="line-height--standard-caps md:text-sm">Shopify UI Design</p>
                           <span class="line-height--standard-caps uppercase md:text-sm">/</span>
-                          <p class="line-height--standard-caps md:text-sm">Themme: E-commerce</p>
+                          <p class="line-height--standard-caps md:text-sm">Theme: E-commerce</p>
                       </div>
                     </div>
 
