--- a/design.html
+++ b/design.html
@@ -221,37 +221,12 @@
                 </svg>
               </div>
               <div class="accordion-content pointer-events-none cursor-none">
-                <a href="design.html" title="Design" class="accordion-content--link uppercase pointer-events-visible cursor-pointer z-index-3">
-                  <span>
-                    <div class="menu--subheader">
-                      <svg class="menu--svg-box none" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                        <rect x="1.10808" y="0.856018" width="16" height="16" stroke="inherit"/>
-                      </svg>                      
-                      <h3>DESIGN</h3>
-                    </div>
-                  </span>
+                <a href="ui-code.html" title="UI / Code" class="accordion-item--left accordion-content--link uppercase pointer-events-visible cursor-pointer z-index-3">
                   <span>
                     <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
                     </svg>
                   </span>
-                </a>
-                <a href="animation.html" title="Animtion" class="accordion-content--link uppercase pointer-events-visible cursor-pointer z-index-3">
-                  <span>
-                    <div class="menu--subheader">
-                      <svg class="menu--svg-box none" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                        <rect x="1.10808" y="0.856018" width="16" height="16" stroke="inherit"/>
-                      </svg>                      
-                      <h3>ANIMATION</h3>
-                    </div>
-                  </span>
-                  <span>
-                    <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
-                    </svg>
-                  </span>
-                </a>
-                <a href="ui-code.html" title="UI / Code" class="accordion-content--link uppercase pointer-events-visible cursor-pointer z-index-3">
                   <span>
                     <div class="menu--subheader">
                       <svg class="menu--svg-box none" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
@@ -260,10 +235,35 @@
                       <h3>UI / CODE</h3>
                     </div>
                   </span>
+                </a>
+                <a href="animation.html" title="Animtion" class="accordion-item--left accordion-content--link uppercase pointer-events-visible cursor-pointer z-index-3">
                   <span>
                     <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
                     </svg>
+                  </span>
+                  <span>
+                    <div class="menu--subheader">
+                      <svg class="menu--svg-box none" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="1.10808" y="0.856018" width="16" height="16" stroke="inherit"/>
+                      </svg>                      
+                      <h3>ANIMATION</h3>
+                    </div>
+                  </span>
+                </a>
+                <a href="design.html" title="Design" class="accordion-item--left accordion-content--link uppercase pointer-events-visible cursor-pointer">
+                  <span>
+                    <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
+                    </svg>
+                  </span>
+                  <span>
+                    <div class="menu--subheader">
+                      <svg class="menu--svg-box none" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="1.10808" y="0.856018" width="16" height="16" stroke="inherit"/>
+                      </svg>                      
+                      <h3>DESIGN</h3>
+                    </div>
                   </span>
                 </a>
               </div>
@@ -282,15 +282,9 @@
               <div class="accordion-content">
                 <div class="mobile-menu--cv">
                   <p class="border-bottom-unset">Say hello, let's work together.</p>
-                  <p class="">
+                  <p class="pb-s">
                     Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio.
                   </p>
-                  <a href="cv.html" class="accordion-content--link border-top--one-dashed--grey" title="Link to cv page">
-                    <span class="uppercase">CV / RÉSUMÉ</span>
-                    <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
-                    </svg>
-                  </a>
                 </div>
               </div>
             </div>
@@ -322,7 +316,7 @@
                     </div>
                     <div class="contact-form--input contact-form--input--message-container">
                       <textarea id="message" class="contact-form--input-placeholder-color" name="message" placeholder="Send me a message*" user-scalable="no" required=""></textarea>
-                      <label for="message" class="contact-form--input--message">MESSAGE:</label>
+                      <label for="message" class="contact-form--input--message">MESSAGE</label>
                     </div>
                     <div class="contact-form--input">
                       <button id="contact-form--submit-two" user-scalable="no" type="submit">SUBMIT</button>
@@ -335,11 +329,11 @@
               <div class="accordion-header">
                 <div class="accordion-content display-flex flex-column flex-start justify-content-start width-100 overflow-hiden max-height--header-height transition-max-height-02">
                   <div class="mobile-menu--cv">
-                    <a href="cv.html" class="accordion-content--link border-top--none-important" title="Link to cv page">
-                      <span class="uppercase">CV / RÉSUMÉ</span>
+                    <a href="cv.html" class="accordion-item--left accordion-content--link border-top--none-important" title="Link to cv page">
                       <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
                       </svg>
+                      <span class="uppercase">CV / RÉSUMÉ</span>
                     </a>
                   </div>
                 </div>
@@ -350,11 +344,11 @@
               <div class="accordion-header">
                 <div class="accordion-content display-flex flex-column flex-start justify-content-start width-100 overflow-hiden max-height--header-height transition-max-height-02">
                   <div class="mobile-menu--cv">
-                    <a href="https://www.linkedin.com/in/chrisedwardsdesign" class="accordion-content--link border-top--none-important" title="linkedIn Page External link to page" target="_blank">
-                      <span class="uppercase">LINKEDIN</span>
+                    <a href="https://www.linkedin.com/in/chrisedwardsdesign" class="accordion-item--left accordion-content--link border-top--none-important" title="linkedIn Page External link to page" target="_blank">
                       <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
                       </svg>
+                      <span class="uppercase">LINKEDIN</span>
                     </a>
                   </div>
                 </div>
