--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
       <section class="credits-content display-flex none">
         <div class="credits-detials--container">
           <h1 class="nav--logotype">CHRIS EDWARDS DESIGN</h1>
-
           <p class="credits-details">This website has been customised and developed by myself, in an attempt to showcase my skills and creativity in design, user experience, and web development. From the visual design to the user interface, every aspect of this site reflects my dedication to creating an engaging and intuitive online portfolio.</p>
           <p class="credits-details pb-s border-bottom--one-dashed">Hosted free on GitHub Pages. Thank you for visiting and exploring my website.</p>
           <p class="credits-details">All content on this portfolio website is the property of Chris Edwards Design and is intended solely for portfolio and display purposes on GitHub Pages. Please note that this website is not used for business; it is hosted on a free plan and any unauthorized reproduction or commercial use is strictly prohibited</p>
@@ -111,7 +110,7 @@
       <!-- nav logo -->
       <nav id="navBar" aria-label="Desktop navigation menu" class="container--nav md:grid-auto-cols--minmax md:grid-cols--unset">
         <div id="aboutTriggerTabletLogoHome" class="nav--logo-container cursor-pointer grid-row-1">  
-          <a class="nav--logotype-container" href="index.html" title="Homepage">
+          <a class="nav--logotype-container" href="index.html" title="Chris Edwards Design — Link to Homepage">
             <h1 class="nav--logotype">CHRIS EDWARDS DESIGN</h1>
             <div class="nav--logo-line none"></div>
             <h1 class="nav--title none">DESIGN</h1>
@@ -298,7 +297,7 @@
                 <div class="mobile-menu--cv">
                   <p class="border-bottom-unset">Say hello, let's work together.</p>
                   <p class="pb-s">
-                    Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio.
+                    Manchester-based multidisciplinary designer with a strong focus in UI Design, Frontend Development, Digital Design, and Motion Design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio.
                   </p>
                 </div>
               </div>
@@ -307,18 +306,18 @@
             <div class="accordion-item">
               <div class="accordion-header">
                 <h3 class="accordion-title uppercase">Contact</h3>
-                <svg id="" class="nav--menu-svg-close accordion-toggle-one accordion-item-svg-open" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                <svg class="nav--menu-svg-close accordion-toggle-one accordion-item-svg-open" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0.686279 9.16797H18.6853M9.68579 0.167969L9.68579 18.167" stroke="#151714"/>
                 </svg>        
-                <svg id="" class="nav--menu-svg-close-2 svg-hide accordion-toggle-two accordion-item-svg-close" width="18" height="2" viewBox="0 0 16 2" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                <svg class="nav--menu-svg-close-2 svg-hide accordion-toggle-two accordion-item-svg-close" width="18" height="2" viewBox="0 0 16 2" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 1.44922H16" stroke="inherit"/>
                 </svg>
               </div>
               <div class="accordion-content">
                   <form id="contact-form-menu" class="contact-form" action="https://formspree.io/f/mzbqwbol" method="POST">
                     <div class="contact-form--input contact-form--input-header-bg-scolor contact-form--marquee-container">
-                      <div id="contact-form-menu" class="contact-form--marquee-container">
-                        <h3 id="contactFormMarqueeTitleTwo" class="uppercase">Message:</h3>
+                      <div class="contact-form--marquee-container">
+                        <h3 class="uppercase">Write me a message</h3>
                       </div>
                     </div>
                     <div class="contact-form--input">
@@ -393,7 +392,7 @@
         <div class="contact-form--intro-container">
           <div class="contact-form--intro--text-container">
             <p class="contact-form--intro--p">Say hello, let's work together.</p>
-            <p class="contact-form--intro--p">Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. Check out my portfolio.</p>
+            <p class="contact-form--intro--p">Manchester-based multidisciplinary designer with a strong focus in UI Design, Frontend Development, Digital Design, and Motion Design. Check out my portfolio.</p>
           </div>
           <a href="cv.html" class="contact-form--intro--list-container border-bottom--one" title="Link to CV page">
             <div class="contact-form--intro--list">
@@ -403,11 +402,11 @@
               <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
             </svg>
           </a>
-          <a id="mailTo" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="contact-form--intro--list-container border-bottom--one" title="Direct email link">
+          <a href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="contact-form--intro--list-container border-bottom--one" title="Direct email link">
             <div class="contact-form--intro--list">
               <span class="uppercase">EMAIL</span>
-              <span class="">/</span>
-              <span class="">chris@chrisedwardsdesign.com</span>
+              <span>/</span>
+              <span>chris@chrisedwardsdesign.com</span>
             </div>
             <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
@@ -416,8 +415,8 @@
           <a id="linkedInLinkContactMenu" href="https://www.linkedin.com/in/chrisedwardsdesign" class="contact-form--intro--list-container" title="linkedIn Page External link to page" target="_blank">
             <div class="contact-form--intro--list">
               <span class="uppercase">LINKEDIN</span>
-              <span class="">/</span>
-              <span class="">chrisedwardsdesign</span>
+              <span>/</span>
+              <span>chrisedwardsdesign</span>
             </div>
             <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
@@ -483,7 +482,7 @@
             <section id="sectionContent" class="content-s">
               <div class="content--text-desktop">
                 <p class="intro-text-desktop">
-                  Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
+                  Manchester-based multidisciplinary designer with a strong focus in UI Design, Frontend Development, Digital Design, and Motion Design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
                 </p>
                 <div class="intro-list--container-about">
                   <ul class="intro-list--row-1">
@@ -574,7 +573,7 @@
                 <!-- desktop about -->
                 <div class="intro-text-container grid gap-one position-relative height-fit align-self-start lg:pt-header-height g:pt-s z-index-2 hide-on-mob--important">
                   <p class="intro-text-desktop font--intro lg:grid-col-1-2 grid-row-1 pointer-events-visible">
-                    Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
+                    Manchester-based multidisciplinary designer with a strong focus in UI Design, Frontend Development, Digital Design, and Motion Design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
                   </p>
                   <div class="intro-list--container lg:grid-col-1-2 grid-row-2 pointer-events-visible">
                     <ul class="intro-list--row-1">
@@ -602,7 +601,7 @@
                     <!-- mobile about -->
                     <div class="intro-text--container-mob">
                       <p class="intro-text-mob md:pt-s md:border-top--one">
-                        Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
+                        Manchester-based multidisciplinary designer with a strong focus in UI Design, Frontend Development, Digital Design, and Motion Design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
                       </p>
                       <div class="intro-list--container-2">
                         <ul class="intro-list--row-1">
