--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,7 @@
         </div>
         <div class="display-flex flex-column w100 hfit gap-s align-flex-start grid-col-1 site--maintenance--text-color pb-xs">
           <p class="intro-text-mob mdt:pt-s lg:pt-0 mdt:border-top--one-maintenance--text-color lg:border-top--one-maintenance--text-color text-l">
-            Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software.
+            Manchester-based multidisciplinary designer with a strong focus in UI Design, Frontend Development, Digital Design, and Motion Design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software.
           </p>
           <div class="intro-list--container-2">
             <ul class="intro-list--row-1">
@@ -99,7 +99,7 @@
       <!-- nav logo -->
       <nav id="navBar" aria-label="Desktop navigation menu" class="container--nav md:grid-auto-cols--minmax md:grid-cols--unset lgbgb:grid-auto-cols--minmax lgbgb:grid-cols--unset">
         <div id="aboutTriggerTabletLogoHome" class="nav--logo-container cursor-pointer lgbg:grid-col-1-3 grid-row-1">  
-          <a class="nav--logotype-container" href="index.html" title="Homepage">
+          <a class="nav--logotype-container" href="index.html" title="Chris Edwards Design — Link to Homepage">
             <h1 class="nav--logotype">CHRIS EDWARDS DESIGN</h1>
             <div class="nav--logo-line none"></div>
             <h1 class="nav--title none">DESIGN</h1>
@@ -283,7 +283,7 @@
                 <div class="mobile-menu--cv">
                   <p class="border-bottom-unset">Say hello, let's work together.</p>
                   <p class="pb-s">
-                    Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio.
+                    Manchester-based multidisciplinary designer with a strong focus in UI Design, Frontend Development, Digital Design, and Motion Design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio.
                   </p>
                 </div>
               </div>
@@ -378,7 +378,7 @@
         <div class="contact-form--intro-container">
           <div class="contact-form--intro--text-container">
             <p class="contact-form--intro--p">Say hello, let's work together.</p>
-            <p class="contact-form--intro--p">Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. Check out my portfolio.</p>
+            <p class="contact-form--intro--p">Manchester-based multidisciplinary designer with a strong focus in UI Design, Frontend Development, Digital Design, and Motion Design. Check out my portfolio.</p>
           </div>
           <a href="cv.html" class="contact-form--intro--list-container border-bottom--one" title="Link to CV page">
             <div class="contact-form--intro--list">
@@ -388,11 +388,11 @@
               <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
             </svg>
           </a>
-          <a id="mailTo" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="contact-form--intro--list-container border-bottom--one" title="Direct email link">
+          <a href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="contact-form--intro--list-container border-bottom--one" title="Direct email link">
             <div class="contact-form--intro--list">
               <span class="uppercase">EMAIL</span>
-              <span class="">/</span>
-              <span class="">chris@chrisedwardsdesign.com</span>
+              <span>/</span>
+              <span>chris@chrisedwardsdesign.com</span>
             </div>
             <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
@@ -401,8 +401,8 @@
           <a id="linkedInLinkContactMenu" href="https://www.linkedin.com/in/chrisedwardsdesign" class="contact-form--intro--list-container" title="linkedIn Page External link to page" target="_blank">
             <div class="contact-form--intro--list">
               <span class="uppercase">LINKEDIN</span>
-              <span class="">/</span>
-              <span class="">chrisedwardsdesign</span>
+              <span>/</span>
+              <span>chrisedwardsdesign</span>
             </div>
             <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
@@ -469,7 +469,7 @@
                 <div class="content--text-desktop-pages grid-auto-cols--minmax md:pt-s lg:pt-s lgbg:pt-none md:border-top--one lg:border-top--one lgbg:border-top--none pb-m">
                   <h3 class="line-height--standard-caps md:text-xl lg:text-2xl lgmm:text-2xl mdta:grid-col-1-2 lgta:grid-col-1-3 md:grid-row-1 lg:grid-row-1 md:text-m uppercase">Background</h3>
                   <p class="intro-text-desktop mdta:grid-col-2-3 lgta:grid-col-3-5 mdta:grid-row-1 lgta:grid-row-1 lgta:grid-row-1 md:text-m lg:text-m lgbt:text-l">
-                    Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D.
+                    Manchester-based multidisciplinary designer with a strong focus in UI Design, Frontend Development, Digital Design, and Motion Design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D.
                   </p>
                   <a href="assets/Chris-Edwards-CV.pdf" class="link--cv-page link--main mdta:grid-col-2-3 lgta:grid-col-3-5 mdta:grid-row-2 lgta:grid-row-2 uppercase mt-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
                     <svg class="cv-link--hover contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -488,7 +488,7 @@
                   <div class="content--text-desktop-pages lg:pt-s lg:pt-none lg:border-top--one pb-m">
                     <h3 class="line-height--standard-caps md:text-xl lg:text-2xl lgmm:text-2xl lg:grid-col-1-2 lgmm:grid-col-1-3 lgbgb:grid-col-1-2 md:text-m grid-row-1 uppercase">Background</h3>
                     <p class="lg:grid-col-1-2 lgmm:grid-col-3-5 lgbg:grid-col-3-5 lgbgb:grid-col-3-5 md:text-m lg:text-m lgbt:text-l">
-                      Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D.
+                      Manchester-based multidisciplinary designer with a strong focus in UI Design, Frontend Development, Digital Design, and Motion Design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D.
                     </p>
                     <a href="assets/Chris-Edwards-CV.pdf" class="link--cv-page link--main lg:grid-col-1-2 lgmm:grid-col-3-5 lgbgb:grid-col-3-5 lgbg:grid-col-3-5 uppercase mt-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
                     <svg class="cv-link--hover svg--hover contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -513,7 +513,7 @@
                       <h3 class="cv-header uppercase wfit md:text-xl lg:text-2xl lgmm:text-2xl line-height--caps">Background</h3>
                     </div>
                     <div class="cv-bulleted-list">
-                      <p class="cv-text-background">Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D.</p>
+                      <p class="cv-text-background">Manchester-based multidisciplinary designer with a strong focus in UI Design, Frontend Development, Digital Design, and Motion Design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D.</p>
                       <a href="assets/Chris-Edwards-CV.pdf" class="link--cv-page-mob link--main--cv link-cv-mobile align-self-start uppercase mt-s-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half" target="_blank">
                         <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
